feat : added pointer on button

--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
             color: cornsilk;
             border-top-left-radius: 1rem;
             border-bottom-right-radius: 1rem;
+            cursor: pointer;
         }
-
-
-
 
         header {
             display: flex;
